[gd_scene load_steps=4 format=3 uid="uid://6l86dj4km6dn"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_mp3ch"]
[ext_resource type="Texture2D" uid="uid://dud08cstim123" path="res://art assets/Scenes/Title.png" id="1_trrw0"]
[ext_resource type="Texture2D" uid="uid://dux7ip5aiww2t" path="res://art assets/Scenes/Intro.png" id="3_m30o8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mp3ch")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -994.0
offset_top = -1085.0
offset_right = 1006.0
offset_bottom = 915.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_trrw0")

[node name="Start_B" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.383
anchor_top = 0.7
anchor_right = 0.58
anchor_bottom = 0.895
offset_left = -0.360046
offset_top = -6.10352e-05
offset_right = -0.600098
offset_bottom = 0.399963
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "START"

[node name="ColorRect" type="ColorRect" parent="Start_B"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.219501, 0.219501, 0.219501, 1)

[node name="Quit_B" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.383
anchor_top = 0.7
anchor_right = 0.58
anchor_bottom = 0.895
offset_left = 850.64
offset_top = 181.0
offset_right = 666.4
offset_bottom = 60.4
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="ColorRect" type="ColorRect" parent="Quit_B"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.145098, 0.145098, 0.145098, 1)

[node name="Intro_Panel" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_m30o8")

[node name="Intro_text" type="Label" parent="Intro_Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1196.0
offset_top = 291.0
offset_right = -311.0
offset_bottom = 480.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "I will get you back."
horizontal_alignment = 1

[node name="continue_text" type="Label" parent="Intro_Panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -538.0
offset_top = -517.0
offset_right = -81.0
offset_bottom = -328.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.227451)
theme_override_font_sizes/font_size = 60
text = "Press Z to load."

[connection signal="pressed" from="Start_B" to="." method="_on_start_b_pressed"]
[connection signal="pressed" from="Quit_B" to="." method="_on_quit_b_pressed"]
